src/main/webapp/public/common/content.scss
table .productCategory,
.productCategory {
  background-color: $cyan;
  font-size: 0.9em;
  text-shadow: 0.1em 0.1em 0 $light-shadow;
  color: $white;
  font-weight: bold;
  .ngAggregateText {
    left: 0.9em;
  }
}

.info-box {
  margin-bottom: 1.4em;
  @include box-shadow(0.2em 0.2em 0 $light-shadow);
  border: 0.1em solid $medium-gray;
  background: $very-light-gray;
  font-size: 0.9em;
  text-shadow: 0 0.1em 0 white;
}

.grid {
  @include size(400px 100%);
  border: 0.1em solid rgb(212, 212, 212);
}

.grid-filters {
  padding: 0.7em 0 1.4em;
  text-align: right;
  display: flex;
  .search-query {
    width: 10em;
    padding: 0.25em 4em;
    margin-top: 0;
  }
}

.grid-btn {
  margin: 0.2em 0.2em;
}

#viewReqList, #approveReqList {
  .ngRow.odd:hover, .ui-grid-row:hover {
    background-color: lighten($cyan, 45%);
    cursor: pointer;
  }
  .ngRow.even:hover {
    background-color: lighten($cyan, 45%);
  }
  .ngCellText {
    span {
      cursor: pointer !important;
    }
  }
  .ui-grid-cell {
    background: inherit !important;
    input[type="button"] {
      border-radius: 0.2em;
      color: $white;
    }
  }
}

.is-disabled {
  color: $medium-gray;
}

.padding2px {
  padding: $padding2px;
}

.emergency:after {
  @include right-arrow-after($red);
}

@media screen and (max-width: 1050px) {
  .regular {
    padding: 29px 15px;
  }

  .regular:after {
    border-width: 39px 0 39px 15px;
    margin-top: -39px;
  }

  .emergency {
    padding: 29px 15px;
  }

  .emergency:after {
    border-width: 39px 0 39px 15px;
    margin-top: -39px;
  }
}

.table-container {
  overflow: auto;
  table {
    max-width: 100%;
    word-wrap: break-word;
  }
}

table.search-list {
  border: 0.1em solid $light-gray;
  border-left: 0;
  position: relative;
  margin: 0.8em 0;
}

.col-icon-ok {
  max-width: 50px;
  min-width: 50px;
}

.gradient-header {
  th {
    min-width: 7em;
    @include linear-gradient(to bottom, $very-light-gray 0%, $light-gray 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$very-light-gray', endColorstr='$light-gray', GradientType=0); /* IE6-9 */
    font-size: 0.9em;
    font-weight: bold;
    text-shadow: 0 0.1em 0 $white;
    color: $dark-gray;
  }
}

